--- a/index.html
+++ b/index.html
@@ -1,1 +1,144 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Just a few things that I have made/created and decided to put up on my website">
+    <meta name="author" content="Caleb Chan">
+
+    <title>Caleb Chan | Dev & NetSec Fanatic</title>
+    <link rel="stylesheet" href="../css_templates/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
+
+<body>
+    <main>
+        <div class="background_test">
+            <header class="header_background">
+                <div class="header_layer">
+                    <div>
+                        <img src="../images/tempmail-avatar.png" width="75" height="75" class="header_img">
+                        <h1 class="header_header">Hi! I'm Caleb Chan <br>Welcome to my Domain!</h1>
+                    </div>
+                    <div class="header_wrapper">
+                        <h2>Some Things About Me</h2>
+                        <p class="header_info">
+                            I'm Caleb Chan and am currently pursing a degree in computer science.
+                            As such, I every now and then I will design a project, write documentation
+                            on how my programs work, or possibly analyze how other programs work.
+                            <br><br>
+                            My primary interests are concerned around developing software and network
+                            security. Besides the usual grind, there are also plenty of other fun stuff that
+                            I would love to join in on, such as pizza chugging, capture the flag (security game),
+                            and more!
+                        </p>
+                    </div>
+                </div>
+            </header>
+        </div>
+
+        <section>
+            <div class="skill_background">
+                <h2>Skills</h2>
+                <p>My general programming include: Python, Flask, C++, x86 Assembly Language, HTML, and CSS.
+                    Some other skills that may be of interest includes Forensics.
+                    You can be assured that my code is of the quality and is well-documented
+                    and organized.
+                </p>
+                <div class="fun_grid">
+                    <div data-aos="fade-up" class="fun_individual_info">
+                        <img src="../images/Python_logo.png" width="100px" height="100px">
+                        <p>Python comes to me like a second language. Feel like writing a quick
+                            script to do something? Python is my answer.
+                        </p>
+                    </div>
+                    <div data-aos="fade-up" class="fun_individual_info">
+                        <img src="../images/pizzaa.png" width="100px" height="100px">
+                        <p>Depending on how hungry I am, I can probably eat half of
+                            a large costco pizza. (Which is delicious and massive if you haven't
+                            tried it before)
+                        </p>
+                    </div>
+                    <div data-aos="fade-up" class="fun_individual_info">
+                        <img src="../images/cmd2.png" width="100px" height="100px">
+                        <p>Reverse Engineering, Penetration Testing, you got it all in one bag here!</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="fun_background">
+                <h2 style="text-align: center; font-size: 2em;"> Fun Stuff</h2>
+
+                <p class="fun_info">
+                    In the "Fun" section, I have included a few programs that I have written while
+                    I had some time. Here are two of my favorite projects that I have written up!
+                </p>
+
+                <div class="fun_grid">
+
+                    <div class="fun_container">
+                        <img src="../images/proj1_template.png" class="fun_img">
+                        <a href="../templates/hehe101.html">
+                            <div class="fun_img_overlay">
+                                <div class="fun_img_txt">Proj1.exe Works</div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="fun_container">
+                        <img src="../images/proj2_template.png" class="fun_img">
+
+                        <a href="../templates/proj_template.html">
+                            <div class="fun_img_overlay">
+                                <div class="fun_img_txt">Proj2.exe Works</div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div style="place-self:center;"><a href="projects.html" class="fun_button">Project List →</a></div>
+
+                </div>
+
+            </div>
+        </section>
+
+        <!--
+        <section>
+            <div class="writing_background">
+                <p>
+                    In the "reads" section, you can view some documentations
+                    and stuff that I have written.
+                </p>
+
+                <a href="Writing.html">Under construction!</a>
+            </div>
+        </section>
+    -->
+
+    </main>
+
+    <footer class="global_footer">
+        <div class="footer_body">
+            <h2>Interested in what I could offer?</h2>
+            <p>Contact Me!</p>
+
+            <p><a href="mailto:calebsc1@uci.edu" class="hover_highlight">calebsc1@uci.edu</a></p>
+            <p><a href="tel:+19095737125" class="hover_highlight">1(909)-573-7125</a></p>
+            <p>@September 2018 | Caleb Chan </p>
+
+        </div>
+    </footer>
+
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!--Why Are You Digging Into My Source Code? >:( -->
+</body>
+
+</html>
