--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             As such, I every now and then I will design a project, write documentation
                             on how my programs work, or possibly analyze how other programs work.
                             <br><br>
-                            My primary interests are concerned around developing software and network
+                            My primary interests are concerned around developing applicable software and network
                             security. Besides the usual grind, there are also plenty of other fun stuff that
                             I would love to join in on, such as pizza chugging, capture the flag (security game),
                             and more!
